--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.8",
-    "@angular/cli": "~12.2.8",
+    "@angular/cli": "^13.0.4",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
@@ -47,6 +47,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/PavloSeniv/seniv-pavlo-app-2.git"
+    "url": "https://github.com/PavloSeniv/seniv-pavlo-app-3.git"
   }
 }
