--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@angular/platform-browser": "~13.0.3",
     "@angular/platform-browser-dynamic": "~13.0.3",
     "@angular/router": "~13.0.3",
+    "@types/lodash": "^4.14.177",
+    "lodash": "^4.17.21",
+    "or": "^0.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
